// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/association /{identifier}/applications returns a list of applications flat 1`] = `
[
  {
    "anneeDemande": 2023,
    "anneesPluriannualite": [
      2022,
      2023,
      2024,
    ],
    "cofinancementsSollicites": false,
    "conditionsVersements": "PHASED",
    "dateConvention": "2023-03-14T00:00:00.000Z",
    "dateDecision": "2023-03-13T00:00:00.000Z",
    "dateDepotDemande": "2023-03-12T00:00:00.000Z",
    "dateMiseAJour": "2025-12-12T00:00:00.000Z",
    "datesPeriodeVersement": [
      "2023-03-15T00:00:00.000Z",
      "2023-03-16T00:00:00.000Z",
    ],
    "descriptionConditionsVersements": "conditions",
    "descriptionIdJointure": "pour joindre",
    "dispositif": "dispositif",
    "ej": "EJ0001",
    "exerciceBudgetaire": 2023,
    "fournisseur": "osiris",
    "idAttribuant": "123456789",
    "idAutoriteGestion": "012345678",
    "idCofinanceursSollicites": [],
    "idEtablissementBeneficiaire": "10000000000001",
    "idJointure": "joint001",
    "idRAE": "RAEid",
    "idServiceInstructeur": "890123456",
    "idSubvention": "osiris--subv001",
    "idSubventionProvider": "subv001",
    "idUnique": "osiris--subv001--2023",
    "idVersement": "1000000000019--subv001--2025",
    "montantAccorde": 15000,
    "montantDemande": 30000,
    "montantTotal": 50000,
    "nature": "Aide en nature",
    "nomAttribuant": "attribuant",
    "nomAutoriteGestion": "autoriteGestion",
    "nomServiceInstructeur": "serviceInstructeur",
    "nomsAttribuantsCofinanceurs": [],
    "notificationUE": false,
    "objet": "objet",
    "pluriannualite": true,
    "pourcentageSubvention": 100,
    "referenceDecision": "idDecision",
    "sousDispositif": "sous-dispositif",
    "statutLabel": "Accordé",
    "typeIdAttribuant": null,
    "typeIdAutoriteGestion": null,
    "typeIdCofinanceursSollicites": [],
    "typeIdEtablissementBeneficiaire": "siret",
    "typeIdServiceInstructeur": null,
  },
  {
    "anneeDemande": 2023,
    "anneesPluriannualite": [
      2022,
      2023,
      2024,
    ],
    "cofinancementsSollicites": false,
    "conditionsVersements": "PHASED",
    "dateConvention": "2023-03-14T00:00:00.000Z",
    "dateDecision": "2023-03-13T00:00:00.000Z",
    "dateDepotDemande": "2023-03-12T00:00:00.000Z",
    "dateMiseAJour": "2025-12-12T00:00:00.000Z",
    "datesPeriodeVersement": [
      "2023-03-15T00:00:00.000Z",
      "2023-03-16T00:00:00.000Z",
    ],
    "descriptionConditionsVersements": "conditions",
    "descriptionIdJointure": "pour joindre",
    "dispositif": "dispositif",
    "ej": "N/A",
    "exerciceBudgetaire": 2023,
    "fournisseur": "fonjep",
    "idAttribuant": "123456789",
    "idAutoriteGestion": "012345678",
    "idCofinanceursSollicites": [],
    "idEtablissementBeneficiaire": "10000000000001",
    "idJointure": "joint001",
    "idRAE": "RAEid",
    "idServiceInstructeur": "890123456",
    "idSubvention": "fonjep--subv002",
    "idSubventionProvider": "subv002",
    "idUnique": "fonjep--subv002--2023",
    "idVersement": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
    "montantAccorde": 15000,
    "montantDemande": 30000,
    "montantTotal": 50000,
    "nature": "Aide en nature",
    "nomAttribuant": "attribuant",
    "nomAutoriteGestion": "autoriteGestion",
    "nomServiceInstructeur": "serviceInstructeur",
    "nomsAttribuantsCofinanceurs": [],
    "notificationUE": false,
    "objet": "objet",
    "pluriannualite": true,
    "pourcentageSubvention": 100,
    "referenceDecision": "idDecision",
    "sousDispositif": "sous-dispositif",
    "statutLabel": "Accordé",
    "typeIdAttribuant": null,
    "typeIdAutoriteGestion": null,
    "typeIdCofinanceursSollicites": [],
    "typeIdEtablissementBeneficiaire": "siret",
    "typeIdServiceInstructeur": null,
  },
]
`;

exports[`/association /{identifier}/grants should return grants with rna 1`] = `
{
  "subventions": [
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "osiris",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "EJ0001",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "1000000000019--subv001--2025",
        },
      },
      "payments": null,
    },
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "fonjep",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "N/A",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
        },
      },
      "payments": null,
    },
    {
      "application": null,
      "payments": [
        {
          "activitee": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'activité Exemple",
          },
          "amount": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 89988.3,
          },
          "centreFinancier": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "UO DGER XXXX-C001",
          },
          "dateOperation": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "object",
            "value": "2023-07-12T00:00:00.000Z",
          },
          "domaineFonctionnel": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'action Exemple",
          },
          "ej": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "0001821732",
          },
          "libelleProgramme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 101,
          },
          "siret": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "10000000000001",
          },
        },
      ],
    },
  ],
}
`;

exports[`/association /{identifier}/grants should return grants with siren 1`] = `
{
  "subventions": [
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "osiris",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "EJ0001",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "osiris",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "1000000000019--subv001--2025",
        },
      },
      "payments": null,
    },
    {
      "application": {
        "actions_proposee": [
          {
            "intitule": {
              "last_update": "2025-12-12T00:00:00.000Z",
              "provider": "fonjep",
              "type": "string",
              "value": "objet",
            },
          },
        ],
        "annee_demande": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "number",
          "value": 2023,
        },
        "co_financement": {
          "cofinanceur": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "cofinanceur_email": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "string",
            "value": "",
          },
          "montants": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 0,
          },
        },
        "creer_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "date_commision": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-13T00:00:00.000Z",
        },
        "dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "dispositif",
        },
        "ej": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "N/A",
        },
        "financeur_principal": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "attribuant",
        },
        "montants": {
          "accorde": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 15000,
          },
          "demande": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 30000,
          },
          "total": {
            "last_update": "2025-12-12T00:00:00.000Z",
            "provider": "fonjep",
            "type": "number",
            "value": 50000,
          },
        },
        "pluriannualite": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "boolean",
          "value": true,
        },
        "service_instructeur": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "serviceInstructeur",
        },
        "siret": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "10000000000001",
        },
        "sous_dispositif": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "sous-dispositif",
        },
        "status": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "statut_label": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "Accordé",
        },
        "transmis_le": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "object",
          "value": "2023-03-12T00:00:00.000Z",
        },
        "versementKey": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
        },
      },
      "payments": null,
    },
    {
      "application": null,
      "payments": [
        {
          "activitee": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'activité Exemple",
          },
          "amount": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 89988.3,
          },
          "centreFinancier": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "UO DGER XXXX-C001",
          },
          "dateOperation": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "object",
            "value": "2023-07-12T00:00:00.000Z",
          },
          "domaineFonctionnel": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Label d'action Exemple",
          },
          "ej": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "0001821732",
          },
          "libelleProgramme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "Programme Exemple",
          },
          "programme": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "number",
            "value": 101,
          },
          "siret": {
            "last_update": "2023-07-12T00:00:00.000Z",
            "provider": "chorus",
            "type": "string",
            "value": "10000000000001",
          },
        },
      ],
    },
  ],
}
`;

exports[`/association /{identifier}/grants/csv returns extract from rna 1`] = `
"﻿Nom de l'association;RNA de l'association;Adresse de l'établissement;Exercice de la demande;Siret;Code postal demandeur;Service instructeur;Dispositif;Intitulé de l'action;Montant demandé;Montant accordé;Statut de la demande;Montant versé;Centre financier du dernier paiement;Date du dernier paiement;Programme des paiements
L'Asso Imaginaire;;47 RUE D'ANTRAIN 35000 RENNES;2023;10000000000001;35000;serviceInstructeur;dispositif;objet;30000;15000;Accordé;;;;
L'Asso Imaginaire;;47 RUE D'ANTRAIN 35000 RENNES;2023;10000000000001;35000;serviceInstructeur;dispositif;objet;30000;15000;Accordé;;;;
L'Asso Imaginaire;;;2023;;;;;;;;;89988,3;UO DGER XXXX-C001;2023-07-12;101 - Programme Exemple
"
`;

exports[`/association /{identifier}/grants/csv returns extract from siren 1`] = `
"﻿Nom de l'association;RNA de l'association;Adresse de l'établissement;Exercice de la demande;Siret;Code postal demandeur;Service instructeur;Dispositif;Intitulé de l'action;Montant demandé;Montant accordé;Statut de la demande;Montant versé;Centre financier du dernier paiement;Date du dernier paiement;Programme des paiements
L'Asso Imaginaire;;47 RUE D'ANTRAIN 35000 RENNES;2023;10000000000001;35000;serviceInstructeur;dispositif;objet;30000;15000;Accordé;;;;
L'Asso Imaginaire;;47 RUE D'ANTRAIN 35000 RENNES;2023;10000000000001;35000;serviceInstructeur;dispositif;objet;30000;15000;Accordé;;;;
L'Asso Imaginaire;;;2023;;;;;;;;;89988,3;UO DGER XXXX-C001;2023-07-12;101 - Programme Exemple
"
`;

exports[`/association /{identifier}/grants/csv returns extract from siret 1`] = `
"﻿Nom de l'association;RNA de l'association;Adresse de l'établissement;Exercice de la demande;Siret;Code postal demandeur;Service instructeur;Dispositif;Intitulé de l'action;Montant demandé;Montant accordé;Statut de la demande;Montant versé;Centre financier du dernier paiement;Date du dernier paiement;Programme des paiements
L'Asso Imaginaire;;47 RUE D'ANTRAIN 35000 RENNES;2023;10000000000001;35000;serviceInstructeur;dispositif;objet;30000;15000;Accordé;;;;
L'Asso Imaginaire;;47 RUE D'ANTRAIN 35000 RENNES;2023;10000000000001;35000;serviceInstructeur;dispositif;objet;30000;15000;Accordé;;;;
L'Asso Imaginaire;;;2023;;;;;;;;;89988,3;UO DGER XXXX-C001;2023-07-12;101 - Programme Exemple
"
`;

exports[`/association /{identifier}/paiements returns a list of payments flat 1`] = `
[
  {
    "action": "Label d'action Exemple",
    "activite": "Label d'activité Exemple",
    "attachementComptable": "BRET",
    "codeAction": "AC123",
    "codeActivite": "AC456",
    "codeCentreFinancier": "AA01/0776-C001-4000",
    "dateMiseAJour": "2025-02-04T00:00:00.000Z",
    "dateOperation": "2023-04-01T00:00:00.000Z",
    "ej": "0001821732",
    "exerciceBudgetaire": 2023,
    "idEntrepriseBeneficiaire": "100000000",
    "idEtablissementBeneficiaire": "10000000000001",
    "idVersement": "12345678901234-0001821732-2023",
    "libelleCentreFinancier": "UO DGER XXXX-C001",
    "ministere": "Ministère Exemple",
    "mission": "Mission Exemple",
    "montant": 1000,
    "numeroProgramme": 1,
    "programme": "Programme Exemple",
    "provider": "chorus",
    "regionAttachementComptable": "Bretagne",
    "sigleMinistere": "ME",
    "typeIdEntrepriseBeneficiaire": "siren",
    "typeIdEtablissementBeneficiaire": "siret",
    "uniqueId": "12345678901234-0001821732-2023-1-AC123-AC456-1680307200000-BRET-AA01/0776-C001-4000",
  },
  {
    "action": "Label d'action Exemple",
    "activite": "Label d'activité Exemple",
    "attachementComptable": "BRET",
    "codeAction": "0101-01-02",
    "codeActivite": "077601003222",
    "codeCentreFinancier": "AA01/0776-C001-4000",
    "dateMiseAJour": "2025-02-04T00:00:00.000Z",
    "dateOperation": "2023-07-12T00:00:00.000Z",
    "ej": "0001821732",
    "exerciceBudgetaire": 2023,
    "idEntrepriseBeneficiaire": "100000000",
    "idEtablissementBeneficiaire": "10000000000001",
    "libelleCentreFinancier": "UO DGER XXXX-C001",
    "ministere": "Ministère Exemple",
    "mission": "Mission Exemple",
    "montant": 89988.3,
    "numeroProgramme": 101,
    "programme": "Programme Exemple",
    "provider": "chorus",
    "regionAttachementComptable": "Bretagne",
    "sigleMinistere": "ME",
    "typeIdEntrepriseBeneficiaire": "siren",
    "typeIdEtablissementBeneficiaire": "siret",
    "uniqueId": "UNIQUE_ID",
  },
]
`;

exports[`/association /{identifier}/raw-grants should return raw grants with rna 1`] = `
[
  {
    "applications": [
      {
        "data": {
          "_id": Any<String>,
          "allocatorId": "123456789",
          "allocatorIdType": null,
          "allocatorName": "attribuant",
          "applicationId": "osiris--subv001",
          "applicationProviderId": "subv001",
          "beneficiaryEstablishmentId": "10000000000001",
          "beneficiaryEstablishmentIdType": "siret",
          "budgetaryYear": 2023,
          "cofinancersIdType": [],
          "cofinancersNames": [],
          "cofinancingRequested": false,
          "confinancersId": [],
          "conventionDate": "2023-03-14T00:00:00.000Z",
          "decisionDate": "2023-03-13T00:00:00.000Z",
          "decisionReference": "idDecision",
          "depositDate": "2023-03-12T00:00:00.000Z",
          "ej": "EJ0001",
          "grantedAmount": 15000,
          "idRAE": "RAEid",
          "instructiveDepartementId": "890123456",
          "instructiveDepartmentIdType": null,
          "instructiveDepartmentName": "serviceInstructeur",
          "joinKeyDesc": "pour joindre",
          "joinKeyId": "joint001",
          "managingAuthorityId": "012345678",
          "managingAuthorityIdType": null,
          "managingAuthorityName": "autoriteGestion",
          "nature": "Aide en nature",
          "object": "objet",
          "paymentCondition": "PHASED",
          "paymentConditionDesc": "conditions",
          "paymentId": "1000000000019--subv001--2025",
          "paymentPeriodDates": [
            "2023-03-15T00:00:00.000Z",
            "2023-03-16T00:00:00.000Z",
          ],
          "pluriannual": true,
          "pluriannualYears": [
            2022,
            2023,
            2024,
          ],
          "provider": "osiris",
          "requestYear": 2023,
          "requestedAmount": 30000,
          "scheme": "dispositif",
          "statusLabel": "Accordé",
          "subScheme": "sous-dispositif",
          "subventionPercentage": 100,
          "totalAmount": 50000,
          "ueNotification": false,
          "uniqueId": "osiris--subv001--2023",
          "updateDate": "2025-12-12T00:00:00.000Z",
        },
        "joinKey": "1000000000019--subv001--2025",
        "provider": "application-flat",
        "type": "application",
      },
    ],
    "payments": [],
  },
  {
    "applications": [
      {
        "data": {
          "_id": Any<String>,
          "allocatorId": "123456789",
          "allocatorIdType": null,
          "allocatorName": "attribuant",
          "applicationId": "fonjep--subv002",
          "applicationProviderId": "subv002",
          "beneficiaryEstablishmentId": "10000000000001",
          "beneficiaryEstablishmentIdType": "siret",
          "budgetaryYear": 2023,
          "cofinancersIdType": [],
          "cofinancersNames": [],
          "cofinancingRequested": false,
          "confinancersId": [],
          "conventionDate": "2023-03-14T00:00:00.000Z",
          "decisionDate": "2023-03-13T00:00:00.000Z",
          "decisionReference": "idDecision",
          "depositDate": "2023-03-12T00:00:00.000Z",
          "ej": "N/A",
          "grantedAmount": 15000,
          "idRAE": "RAEid",
          "instructiveDepartementId": "890123456",
          "instructiveDepartmentIdType": null,
          "instructiveDepartmentName": "serviceInstructeur",
          "joinKeyDesc": "pour joindre",
          "joinKeyId": "joint001",
          "managingAuthorityId": "012345678",
          "managingAuthorityIdType": null,
          "managingAuthorityName": "autoriteGestion",
          "nature": "Aide en nature",
          "object": "objet",
          "paymentCondition": "PHASED",
          "paymentConditionDesc": "conditions",
          "paymentId": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
          "paymentPeriodDates": [
            "2023-03-15T00:00:00.000Z",
            "2023-03-16T00:00:00.000Z",
          ],
          "pluriannual": true,
          "pluriannualYears": [
            2022,
            2023,
            2024,
          ],
          "provider": "fonjep",
          "requestYear": 2023,
          "requestedAmount": 30000,
          "scheme": "dispositif",
          "statusLabel": "Accordé",
          "subScheme": "sous-dispositif",
          "subventionPercentage": 100,
          "totalAmount": 50000,
          "ueNotification": false,
          "uniqueId": "fonjep--subv002--2023",
          "updateDate": "2025-12-12T00:00:00.000Z",
        },
        "joinKey": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
        "provider": "application-flat",
        "type": "application",
      },
    ],
    "payments": [],
  },
  {
    "applications": [],
    "payments": [
      {
        "data": {
          "_id": Any<String>,
          "actionCode": "0101-01-02",
          "actionLabel": "Label d'action Exemple",
          "activityCode": "077601003222",
          "activityLabel": "Label d'activité Exemple",
          "amount": 89988.3,
          "attachementComptable": "BRET",
          "centreFinancierCode": "AA01/0776-C001-4000",
          "centreFinancierLibelle": "UO DGER XXXX-C001",
          "ej": "0001821732",
          "exerciceBudgetaire": 2023,
          "idEntrepriseBeneficiaire": {
            "identifier": "100000000",
          },
          "idEtablissementBeneficiaire": {
            "identifier": "10000000000001",
          },
          "ministry": "Ministère Exemple",
          "ministryAcronym": "ME",
          "mission": "Mission Exemple",
          "operationDate": "2023-07-12T00:00:00.000Z",
          "programName": "Programme Exemple",
          "programNumber": 101,
          "provider": "chorus",
          "regionAttachementComptable": "Bretagne",
          "typeIdEntrepriseBeneficiaire": "siren",
          "typeIdEtablissementBeneficiaire": "siret",
          "uniqueId": "UNIQUE_ID",
        },
        "provider": "payment-flat",
        "type": "payment",
      },
    ],
  },
]
`;

exports[`/association /{identifier}/raw-grants should return raw grants with siren 1`] = `
[
  {
    "applications": [
      {
        "data": {
          "_id": Any<String>,
          "allocatorId": "123456789",
          "allocatorIdType": null,
          "allocatorName": "attribuant",
          "applicationId": "osiris--subv001",
          "applicationProviderId": "subv001",
          "beneficiaryEstablishmentId": "10000000000001",
          "beneficiaryEstablishmentIdType": "siret",
          "budgetaryYear": 2023,
          "cofinancersIdType": [],
          "cofinancersNames": [],
          "cofinancingRequested": false,
          "confinancersId": [],
          "conventionDate": "2023-03-14T00:00:00.000Z",
          "decisionDate": "2023-03-13T00:00:00.000Z",
          "decisionReference": "idDecision",
          "depositDate": "2023-03-12T00:00:00.000Z",
          "ej": "EJ0001",
          "grantedAmount": 15000,
          "idRAE": "RAEid",
          "instructiveDepartementId": "890123456",
          "instructiveDepartmentIdType": null,
          "instructiveDepartmentName": "serviceInstructeur",
          "joinKeyDesc": "pour joindre",
          "joinKeyId": "joint001",
          "managingAuthorityId": "012345678",
          "managingAuthorityIdType": null,
          "managingAuthorityName": "autoriteGestion",
          "nature": "Aide en nature",
          "object": "objet",
          "paymentCondition": "PHASED",
          "paymentConditionDesc": "conditions",
          "paymentId": "1000000000019--subv001--2025",
          "paymentPeriodDates": [
            "2023-03-15T00:00:00.000Z",
            "2023-03-16T00:00:00.000Z",
          ],
          "pluriannual": true,
          "pluriannualYears": [
            2022,
            2023,
            2024,
          ],
          "provider": "osiris",
          "requestYear": 2023,
          "requestedAmount": 30000,
          "scheme": "dispositif",
          "statusLabel": "Accordé",
          "subScheme": "sous-dispositif",
          "subventionPercentage": 100,
          "totalAmount": 50000,
          "ueNotification": false,
          "uniqueId": "osiris--subv001--2023",
          "updateDate": "2025-12-12T00:00:00.000Z",
        },
        "joinKey": "1000000000019--subv001--2025",
        "provider": "application-flat",
        "type": "application",
      },
    ],
    "payments": [],
  },
  {
    "applications": [
      {
        "data": {
          "_id": Any<String>,
          "allocatorId": "123456789",
          "allocatorIdType": null,
          "allocatorName": "attribuant",
          "applicationId": "fonjep--subv002",
          "applicationProviderId": "subv002",
          "beneficiaryEstablishmentId": "10000000000001",
          "beneficiaryEstablishmentIdType": "siret",
          "budgetaryYear": 2023,
          "cofinancersIdType": [],
          "cofinancersNames": [],
          "cofinancingRequested": false,
          "confinancersId": [],
          "conventionDate": "2023-03-14T00:00:00.000Z",
          "decisionDate": "2023-03-13T00:00:00.000Z",
          "decisionReference": "idDecision",
          "depositDate": "2023-03-12T00:00:00.000Z",
          "ej": "N/A",
          "grantedAmount": 15000,
          "idRAE": "RAEid",
          "instructiveDepartementId": "890123456",
          "instructiveDepartmentIdType": null,
          "instructiveDepartmentName": "serviceInstructeur",
          "joinKeyDesc": "pour joindre",
          "joinKeyId": "joint001",
          "managingAuthorityId": "012345678",
          "managingAuthorityIdType": null,
          "managingAuthorityName": "autoriteGestion",
          "nature": "Aide en nature",
          "object": "objet",
          "paymentCondition": "PHASED",
          "paymentConditionDesc": "conditions",
          "paymentId": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
          "paymentPeriodDates": [
            "2023-03-15T00:00:00.000Z",
            "2023-03-16T00:00:00.000Z",
          ],
          "pluriannual": true,
          "pluriannualYears": [
            2022,
            2023,
            2024,
          ],
          "provider": "fonjep",
          "requestYear": 2023,
          "requestedAmount": 30000,
          "scheme": "dispositif",
          "statusLabel": "Accordé",
          "subScheme": "sous-dispositif",
          "subventionPercentage": 100,
          "totalAmount": 50000,
          "ueNotification": false,
          "uniqueId": "fonjep--subv002--2023",
          "updateDate": "2025-12-12T00:00:00.000Z",
        },
        "joinKey": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
        "provider": "application-flat",
        "type": "application",
      },
    ],
    "payments": [],
  },
  {
    "applications": [],
    "payments": [
      {
        "data": {
          "_id": Any<String>,
          "actionCode": "0101-01-02",
          "actionLabel": "Label d'action Exemple",
          "activityCode": "077601003222",
          "activityLabel": "Label d'activité Exemple",
          "amount": 89988.3,
          "attachementComptable": "BRET",
          "centreFinancierCode": "AA01/0776-C001-4000",
          "centreFinancierLibelle": "UO DGER XXXX-C001",
          "ej": "0001821732",
          "exerciceBudgetaire": 2023,
          "idEntrepriseBeneficiaire": {
            "identifier": "100000000",
          },
          "idEtablissementBeneficiaire": {
            "identifier": "10000000000001",
          },
          "ministry": "Ministère Exemple",
          "ministryAcronym": "ME",
          "mission": "Mission Exemple",
          "operationDate": "2023-07-12T00:00:00.000Z",
          "programName": "Programme Exemple",
          "programNumber": 101,
          "provider": "chorus",
          "regionAttachementComptable": "Bretagne",
          "typeIdEntrepriseBeneficiaire": "siren",
          "typeIdEtablissementBeneficiaire": "siret",
          "uniqueId": "UNIQUE_ID",
        },
        "provider": "payment-flat",
        "type": "payment",
      },
    ],
  },
]
`;

exports[`/association /{structure_identifier} should return an association 1`] = `
{
  "association": {
    "adresse_siege_siren": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "object",
        "value": {
          "code_postal": "35000",
          "commune": "Rennes",
          "numero": "47",
          "type_voie": "rue",
          "voie": "d'Antrain",
        },
      },
    ],
    "categorie_juridique": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "string",
        "value": "Association loi 1901",
      },
    ],
    "date_creation_siren": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "object",
        "value": "1986-10-14T00:00:00.000Z",
      },
    ],
    "date_modification_siren": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "object",
        "value": "2025-04-12T00:00:00.000Z",
      },
    ],
    "denomination_siren": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "string",
        "value": "L'Asso Imaginaire",
      },
    ],
    "etablisements_siret": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "object",
        "value": [
          "10000000000001",
        ],
      },
    ],
    "nic_siege": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "string",
        "value": "00001",
      },
    ],
    "siren": [
      {
        "last_update": "2025-06-25T00:00:00.000Z",
        "provider": "API ASSO",
        "type": "string",
        "value": "100000000",
      },
    ],
  },
}
`;

exports[`/association /{structure_identifier}/etablissements should return EstablishmentSimplified[] 1`] = `
{
  "etablissements": [
    {
      "adresse": [
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "object",
          "value": {
            "code_postal": "35000",
            "commune": "Rennes",
            "numero": "47",
            "type_voie": "rue",
            "voie": "d'Antrain",
          },
        },
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "object",
          "value": {
            "code_postal": "35700",
            "commune": "Rennes",
            "numero": "12",
            "type_voie": "avenue",
            "voie": "du Général Leclerc",
          },
        },
      ],
      "headcount": [
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "string",
          "value": "12",
        },
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "string",
          "value": "0",
        },
      ],
      "nic": [
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "string",
          "value": "00001",
        },
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "string",
          "value": "00002",
        },
      ],
      "ouvert": [
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "boolean",
          "value": true,
        },
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "boolean",
          "value": false,
        },
      ],
      "siege": [
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "boolean",
          "value": true,
        },
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "boolean",
          "value": false,
        },
      ],
      "siret": [
        {
          "last_update": "2025-06-25T00:00:00.000Z",
          "provider": "API ASSO",
          "type": "string",
          "value": "10000000000001",
        },
      ],
    },
  ],
}
`;

exports[`/association /{structure_identifier}/subventions should return a list of subventions 1`] = `
[
  {
    "actions_proposee": [
      {
        "intitule": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "osiris",
          "type": "string",
          "value": "objet",
        },
      },
    ],
    "annee_demande": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "number",
      "value": 2023,
    },
    "co_financement": {
      "cofinanceur": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "",
      },
      "cofinanceur_email": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "string",
        "value": "",
      },
      "montants": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "number",
        "value": 0,
      },
    },
    "creer_le": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "object",
      "value": "2023-03-12T00:00:00.000Z",
    },
    "date_commision": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "object",
      "value": "2023-03-13T00:00:00.000Z",
    },
    "dispositif": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "dispositif",
    },
    "ej": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "EJ0001",
    },
    "financeur_principal": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "attribuant",
    },
    "montants": {
      "accorde": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "number",
        "value": 15000,
      },
      "demande": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "number",
        "value": 30000,
      },
      "total": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "osiris",
        "type": "number",
        "value": 50000,
      },
    },
    "pluriannualite": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "boolean",
      "value": true,
    },
    "service_instructeur": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "serviceInstructeur",
    },
    "siret": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "10000000000001",
    },
    "sous_dispositif": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "sous-dispositif",
    },
    "status": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "Accordé",
    },
    "statut_label": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "Accordé",
    },
    "transmis_le": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "object",
      "value": "2023-03-12T00:00:00.000Z",
    },
    "versementKey": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "osiris",
      "type": "string",
      "value": "1000000000019--subv001--2025",
    },
  },
  {
    "actions_proposee": [
      {
        "intitule": {
          "last_update": "2025-12-12T00:00:00.000Z",
          "provider": "fonjep",
          "type": "string",
          "value": "objet",
        },
      },
    ],
    "annee_demande": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "number",
      "value": 2023,
    },
    "co_financement": {
      "cofinanceur": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "",
      },
      "cofinanceur_email": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "string",
        "value": "",
      },
      "montants": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "number",
        "value": 0,
      },
    },
    "creer_le": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "object",
      "value": "2023-03-12T00:00:00.000Z",
    },
    "date_commision": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "object",
      "value": "2023-03-13T00:00:00.000Z",
    },
    "dispositif": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "dispositif",
    },
    "ej": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "N/A",
    },
    "financeur_principal": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "attribuant",
    },
    "montants": {
      "accorde": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "number",
        "value": 15000,
      },
      "demande": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "number",
        "value": 30000,
      },
      "total": {
        "last_update": "2025-12-12T00:00:00.000Z",
        "provider": "fonjep",
        "type": "number",
        "value": 50000,
      },
    },
    "pluriannualite": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "boolean",
      "value": true,
    },
    "service_instructeur": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "serviceInstructeur",
    },
    "siret": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "10000000000001",
    },
    "sous_dispositif": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "sous-dispositif",
    },
    "status": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "Accordé",
    },
    "statut_label": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "Accordé",
    },
    "transmis_le": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "object",
      "value": "2023-03-12T00:00:00.000Z",
    },
    "versementKey": {
      "last_update": "2025-12-12T00:00:00.000Z",
      "provider": "fonjep",
      "type": "string",
      "value": "CODE_POSTE-OPERATION_DATE-EXERCISE-IDENTIFIER",
    },
  },
]
`;
